// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create a Form accepts both label and labelText 1`] = `
<div
  class="Grid-grid-0 Grid-gridHSpace1-0 Grid-gridVSpace1-0"
>
  <div
    class="Grid-gridSpan-0"
  >
    <div>
      <div
        class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionColumn-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsEnd-0 FlexBox-flexWrapNoWrap-0"
      >
        <div
          class="FormGroup-formGroupStyle-0"
        >
          <div
            class="FormItem-formItemTopDiv-0"
            style="display: flex;"
          >
            <ui5-label
              class="FormItem-formLabel-0"
              for=""
              style="width: 33%; justify-content: flex-end;"
            >
              item 1:
            </ui5-label>
            <div
              class="FormItem-formElement-0"
              style="width: 66%;"
            >
              <ui5-input
                name=""
                placeholder=""
                type="Text"
                value=""
                value-state="None"
              />
            </div>
          </div>
        </div>
        <div
          class="FormGroup-formGroupStyle-0"
        >
          <div
            class="FormItem-formItemTopDiv-0"
            style="display: flex;"
          >
            <ui5-label
              class="FormItem-formLabel-0"
              for=""
              style="width: 33%; justify-content: flex-end;"
            >
              Label Text:
            </ui5-label>
            <div
              class="FormItem-formElement-0"
              style="width: 66%;"
            >
              <ui5-input
                name=""
                placeholder=""
                type="Number"
                value=""
                value-state="None"
              />
            </div>
          </div>
        </div>
        <div
          class="FormGroup-formGroupStyle-0"
        >
          <div
            class="FormItem-formItemTopDiv-0"
            style="display: flex;"
          >
            <ui5-label
              class="FormItem-formLabel-0"
              for=""
              required="true"
              style="width: 33%; justify-content: flex-end;"
            >
              Label Component:
            </ui5-label>
            <div
              class="FormItem-formElement-0"
              style="width: 66%;"
            >
              <ui5-input
                name=""
                placeholder=""
                type="Number"
                value=""
                value-state="None"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create a Form should create a FormGroup and put ungrouped FormItems into it 1`] = `
Array [
  <ui5-title
    class="Form-formTitle-0"
    level="H3"
  >
    Test form
  </ui5-title>,
  <div
    class="Form-formTitlePaddingBottom-0"
  />,
  <div
    class="Grid-grid-0 Grid-gridHSpace1-0 Grid-gridVSpace1-0"
  >
    <div
      class="Grid-gridSpan-0"
    >
      <div>
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionColumn-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsEnd-0 FlexBox-flexWrapNoWrap-0"
        >
          <div
            class="FormGroup-formGroupStyle-0"
          >
            <div
              class="FormItem-formItemTopDiv-0"
              style="display: flex;"
            >
              <ui5-label
                class="FormItem-formLabel-0"
                for=""
                style="width: 33%; justify-content: flex-end;"
              >
                item 1:
              </ui5-label>
              <div
                class="FormItem-formElement-0"
                style="width: 66%;"
              >
                <ui5-input
                  name=""
                  placeholder=""
                  type="Text"
                  value=""
                  value-state="None"
                />
              </div>
            </div>
          </div>
          <div
            class="FormGroup-formGroupStyle-0"
          >
            <div
              class="FormItem-formItemTopDiv-0"
              style="display: flex;"
            >
              <ui5-label
                class="FormItem-formLabel-0"
                for=""
                style="width: 33%; justify-content: flex-end;"
              >
                item 2:
              </ui5-label>
              <div
                class="FormItem-formElement-0"
                style="width: 66%;"
              >
                <ui5-input
                  name=""
                  placeholder=""
                  type="Number"
                  value=""
                  value-state="None"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Create a Form should use a single FormGroup's title as a Form title if one is not set 1`] = `
Array [
  <ui5-title
    class="Form-formTitle-0"
    level="H3"
  >
    To be Form title
  </ui5-title>,
  <div
    class="Form-formTitlePaddingBottom-0"
  />,
  <div
    class="Grid-grid-0 Grid-gridHSpace1-0 Grid-gridVSpace1-0"
  >
    <div
      class="Grid-gridSpan-0"
    >
      <div>
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionColumn-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsEnd-0 FlexBox-flexWrapNoWrap-0"
        >
          <div
            class="FormGroup-formGroupStyle-0"
          >
            <div
              class="FormItem-formItemTopDiv-0"
              style="display: flex;"
            >
              <ui5-label
                class="FormItem-formLabel-0"
                for=""
                style="width: 33%; justify-content: flex-end;"
              >
                item 1:
              </ui5-label>
              <div
                class="FormItem-formElement-0"
                style="width: 66%;"
              >
                <ui5-input
                  name=""
                  placeholder=""
                  type="Text"
                  value=""
                  value-state="None"
                />
              </div>
            </div>
          </div>
          <div
            class="FormGroup-formGroupStyle-0"
          >
            <div
              class="FormItem-formItemTopDiv-0"
              style="display: flex;"
            >
              <ui5-label
                class="FormItem-formLabel-0"
                for=""
                style="width: 33%; justify-content: flex-end;"
              >
                item 2:
              </ui5-label>
              <div
                class="FormItem-formElement-0"
                style="width: 66%;"
              >
                <ui5-input
                  name=""
                  placeholder=""
                  type="Number"
                  value=""
                  value-state="None"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Create a Form size rate L; should create Label and Element with 33% and 66% width respectively and display: flex for top FormItem div 1`] = `
Array [
  <ui5-title
    class="Form-formTitle-0"
    level="H3"
  >
    Test form
  </ui5-title>,
  <div
    class="Form-formTitlePaddingBottom-0"
  />,
  <div
    class="Grid-grid-0 Grid-gridHSpace1-0 Grid-gridVSpace1-0"
  >
    <div
      class="Grid-gridSpan-0"
    >
      <div>
        <ui5-title
          class="FormGroup-formPaddingBottom-0"
          level="H5"
        >
          Group 1
        </ui5-title>
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionColumn-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsEnd-0 FlexBox-flexWrapNoWrap-0"
        >
          <div
            class="FormGroup-formGroupStyle-0"
          >
            <div
              class="FormItem-formItemTopDiv-0"
              style="display: flex;"
            >
              <ui5-label
                class="FormItem-formLabel-0"
                for=""
                style="width: 33%; justify-content: flex-end;"
              >
                item 1:
              </ui5-label>
              <div
                class="FormItem-formElement-0"
                style="width: 66%;"
              >
                <ui5-input
                  name=""
                  placeholder=""
                  type="Text"
                  value=""
                  value-state="None"
                />
              </div>
            </div>
          </div>
          <div
            class="FormGroup-formGroupStyle-0"
          >
            <div
              class="FormItem-formItemTopDiv-0"
              style="display: flex;"
            >
              <ui5-label
                class="FormItem-formLabel-0"
                for=""
                style="width: 33%; justify-content: flex-end;"
              >
                item 2:
              </ui5-label>
              <div
                class="FormItem-formElement-0"
                style="width: 66%;"
              >
                <ui5-input
                  name=""
                  placeholder=""
                  type="Number"
                  value=""
                  value-state="None"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Grid-gridSpan-0"
    >
      <div>
        <ui5-title
          class="FormGroup-formPaddingBottom-0"
          level="H5"
        >
          Group 2
        </ui5-title>
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionColumn-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsEnd-0 FlexBox-flexWrapNoWrap-0"
        >
          <div
            class="FormGroup-formGroupStyle-0"
          >
            <div
              class="FormItem-formItemTopDiv-0"
              style="display: flex;"
            >
              <ui5-label
                class="FormItem-formLabel-0"
                for=""
                style="width: 33%; justify-content: flex-end;"
              >
                item 1:
              </ui5-label>
              <div
                class="FormItem-formElement-0"
                style="width: 66%;"
              >
                <ui5-input
                  name=""
                  placeholder=""
                  type="Text"
                  value=""
                  value-state="None"
                />
              </div>
            </div>
          </div>
          <div
            class="FormGroup-formGroupStyle-0"
          >
            <div
              class="FormItem-formItemTopDiv-0"
              style="display: flex;"
            >
              <ui5-label
                class="FormItem-formLabel-0"
                for=""
                style="width: 33%; justify-content: flex-end;"
              >
                item 2:
              </ui5-label>
              <div
                class="FormItem-formElement-0"
                style="width: 66%;"
              >
                <ui5-input
                  name=""
                  placeholder=""
                  type="Number"
                  value=""
                  value-state="None"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Create a Form size rate M; should create Label and Element with 16% and 83% width respectively and display: flex for top FormItem div 1`] = `
Array [
  <ui5-title
    class="Form-formTitle-0"
    level="H3"
  >
    Test form
  </ui5-title>,
  <div
    class="Form-formTitlePaddingBottom-0"
  />,
  <div
    class="Grid-grid-0 Grid-gridHSpace1-0 Grid-gridVSpace1-0"
  >
    <div
      class="Grid-gridSpan-0"
    >
      <div>
        <ui5-title
          class="FormGroup-formPaddingBottom-0"
          level="H5"
        >
          Group 1
        </ui5-title>
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionColumn-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsEnd-0 FlexBox-flexWrapNoWrap-0"
        >
          <div
            class="FormGroup-formGroupStyle-0"
          >
            <div
              class="FormItem-formItemTopDiv-0"
              style="display: flex;"
            >
              <ui5-label
                class="FormItem-formLabel-0"
                for=""
                style="width: 16%; justify-content: flex-end;"
              >
                item 1:
              </ui5-label>
              <div
                class="FormItem-formElement-0"
                style="width: 83%;"
              >
                <ui5-input
                  name=""
                  placeholder=""
                  type="Text"
                  value=""
                  value-state="None"
                />
              </div>
            </div>
          </div>
          <div
            class="FormGroup-formGroupStyle-0"
          >
            <div
              class="FormItem-formItemTopDiv-0"
              style="display: flex;"
            >
              <ui5-label
                class="FormItem-formLabel-0"
                for=""
                style="width: 16%; justify-content: flex-end;"
              >
                item 2:
              </ui5-label>
              <div
                class="FormItem-formElement-0"
                style="width: 83%;"
              >
                <ui5-input
                  name=""
                  placeholder=""
                  type="Number"
                  value=""
                  value-state="None"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Grid-gridSpan-0"
    >
      <div>
        <ui5-title
          class="FormGroup-formPaddingBottom-0"
          level="H5"
        >
          Group 2
        </ui5-title>
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionColumn-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsEnd-0 FlexBox-flexWrapNoWrap-0"
        >
          <div
            class="FormGroup-formGroupStyle-0"
          >
            <div
              class="FormItem-formItemTopDiv-0"
              style="display: flex;"
            >
              <ui5-label
                class="FormItem-formLabel-0"
                for=""
                style="width: 16%; justify-content: flex-end;"
              >
                item 1:
              </ui5-label>
              <div
                class="FormItem-formElement-0"
                style="width: 83%;"
              >
                <ui5-input
                  name=""
                  placeholder=""
                  type="Text"
                  value=""
                  value-state="None"
                />
              </div>
            </div>
          </div>
          <div
            class="FormGroup-formGroupStyle-0"
          >
            <div
              class="FormItem-formItemTopDiv-0"
              style="display: flex;"
            >
              <ui5-label
                class="FormItem-formLabel-0"
                for=""
                style="width: 16%; justify-content: flex-end;"
              >
                item 2:
              </ui5-label>
              <div
                class="FormItem-formElement-0"
                style="width: 83%;"
              >
                <ui5-input
                  name=""
                  placeholder=""
                  type="Number"
                  value=""
                  value-state="None"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Create a Form size rate S; should create Label and Element with 100% width and display: block for top FormItem div 1`] = `
Array [
  <ui5-title
    class="Form-formTitle-0"
    level="H3"
  >
    Test form
  </ui5-title>,
  <div
    class="Form-formTitlePaddingBottom-0"
  />,
  <div
    class="Grid-grid-0 Grid-gridHSpace1-0 Grid-gridVSpace1-0"
  >
    <div
      class="Grid-gridSpan-0"
    >
      <div>
        <ui5-title
          class="FormGroup-formPaddingBottom-0"
          level="H5"
        >
          Group 1
        </ui5-title>
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionColumn-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsEnd-0 FlexBox-flexWrapNoWrap-0"
        >
          <div
            class="FormGroup-formGroupStyle-0"
          >
            <div
              class="FormItem-formItemTopDiv-0"
              style="display: block;"
            >
              <ui5-label
                class="FormItem-formLabel-0"
                for=""
                style="width: 100%; justify-content: flex-start;"
              >
                item 1:
              </ui5-label>
              <div
                class="FormItem-formElement-0"
                style="width: 100%;"
              >
                <ui5-input
                  name=""
                  placeholder=""
                  type="Text"
                  value=""
                  value-state="None"
                />
              </div>
            </div>
          </div>
          <div
            class="FormGroup-formGroupStyle-0"
          >
            <div
              class="FormItem-formItemTopDiv-0"
              style="display: block;"
            >
              <ui5-label
                class="FormItem-formLabel-0"
                for=""
                style="width: 100%; justify-content: flex-start;"
              >
                item 2:
              </ui5-label>
              <div
                class="FormItem-formElement-0"
                style="width: 100%;"
              >
                <ui5-input
                  name=""
                  placeholder=""
                  type="Number"
                  value=""
                  value-state="None"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Grid-gridSpan-0"
    >
      <div>
        <ui5-title
          class="FormGroup-formPaddingBottom-0"
          level="H5"
        >
          Group 2
        </ui5-title>
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionColumn-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsEnd-0 FlexBox-flexWrapNoWrap-0"
        >
          <div
            class="FormGroup-formGroupStyle-0"
          >
            <div
              class="FormItem-formItemTopDiv-0"
              style="display: block;"
            >
              <ui5-label
                class="FormItem-formLabel-0"
                for=""
                style="width: 100%; justify-content: flex-start;"
              >
                item 1:
              </ui5-label>
              <div
                class="FormItem-formElement-0"
                style="width: 100%;"
              >
                <ui5-input
                  name=""
                  placeholder=""
                  type="Text"
                  value=""
                  value-state="None"
                />
              </div>
            </div>
          </div>
          <div
            class="FormGroup-formGroupStyle-0"
          >
            <div
              class="FormItem-formItemTopDiv-0"
              style="display: block;"
            >
              <ui5-label
                class="FormItem-formLabel-0"
                for=""
                style="width: 100%; justify-content: flex-start;"
              >
                item 2:
              </ui5-label>
              <div
                class="FormItem-formElement-0"
                style="width: 100%;"
              >
                <ui5-input
                  name=""
                  placeholder=""
                  type="Number"
                  value=""
                  value-state="None"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Create a Form size rate XL; should create Label and Element with 33% and 66% width respectively and display: flex for top FormItem div 1`] = `
Array [
  <ui5-title
    class="Form-formTitle-0"
    level="H3"
  >
    Test form
  </ui5-title>,
  <div
    class="Form-formTitlePaddingBottom-0"
  />,
  <div
    class="Grid-grid-0 Grid-gridHSpace1-0 Grid-gridVSpace1-0"
  >
    <div
      class="Grid-gridSpan-0"
    >
      <div>
        <ui5-title
          class="FormGroup-formPaddingBottom-0"
          level="H5"
        >
          Group 1
        </ui5-title>
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionColumn-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsEnd-0 FlexBox-flexWrapNoWrap-0"
        >
          <div
            class="FormGroup-formGroupStyle-0"
          >
            <div
              class="FormItem-formItemTopDiv-0"
              style="display: flex;"
            >
              <ui5-label
                class="FormItem-formLabel-0"
                for=""
                style="width: 33%; justify-content: flex-end;"
              >
                item 1:
              </ui5-label>
              <div
                class="FormItem-formElement-0"
                style="width: 66%;"
              >
                <ui5-input
                  name=""
                  placeholder=""
                  type="Text"
                  value=""
                  value-state="None"
                />
              </div>
            </div>
          </div>
          <div
            class="FormGroup-formGroupStyle-0"
          >
            <div
              class="FormItem-formItemTopDiv-0"
              style="display: flex;"
            >
              <ui5-label
                class="FormItem-formLabel-0"
                for=""
                style="width: 33%; justify-content: flex-end;"
              >
                item 2:
              </ui5-label>
              <div
                class="FormItem-formElement-0"
                style="width: 66%;"
              >
                <ui5-input
                  name=""
                  placeholder=""
                  type="Number"
                  value=""
                  value-state="None"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Grid-gridSpan-0"
    >
      <div>
        <ui5-title
          class="FormGroup-formPaddingBottom-0"
          level="H5"
        >
          Group 2
        </ui5-title>
        <div
          class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionColumn-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsEnd-0 FlexBox-flexWrapNoWrap-0"
        >
          <div
            class="FormGroup-formGroupStyle-0"
          >
            <div
              class="FormItem-formItemTopDiv-0"
              style="display: flex;"
            >
              <ui5-label
                class="FormItem-formLabel-0"
                for=""
                style="width: 33%; justify-content: flex-end;"
              >
                item 1:
              </ui5-label>
              <div
                class="FormItem-formElement-0"
                style="width: 66%;"
              >
                <ui5-input
                  name=""
                  placeholder=""
                  type="Text"
                  value=""
                  value-state="None"
                />
              </div>
            </div>
          </div>
          <div
            class="FormGroup-formGroupStyle-0"
          >
            <div
              class="FormItem-formItemTopDiv-0"
              style="display: flex;"
            >
              <ui5-label
                class="FormItem-formLabel-0"
                for=""
                style="width: 33%; justify-content: flex-end;"
              >
                item 2:
              </ui5-label>
              <div
                class="FormItem-formElement-0"
                style="width: 66%;"
              >
                <ui5-input
                  name=""
                  placeholder=""
                  type="Number"
                  value=""
                  value-state="None"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
